# MyCODEagent

./: .gitignore  .template.aider.conf.yml  README.md  pyproject.toml
docs/: README.md  adding_db_commands.md  assistants.md  code-generation.md  command_context.md  configuration.md  database-guide.md  director-mode.md  getting-started.md  project-management.md  sqlalchemy.md  voice-commands.md
scripts/: create_assistant_impl.py  deepseek-architect.sh
src/myCODEagent/: __init__.py  config.yml  database.py  main.py
src/myCODEagent/agents/: agent_manager.py  base_agent.py  template_manager.py
src/myCODEagent/core/: assistant_config.py  command_processor.py  create_directory.py  enhanced_director.py  ollama.py  project_generator.py  r1.py
src/myCODEagent/db/: setup_db.py
src/myCODEagent/db/models/: models.py  schema.py
src/myCODEagent/generation/core/: template_loader.py
src/myCODEagent/generation/domain_templates/: domain.yml  domain2.yml  (+1 more)
src/myCODEagent/utils/: utils.py
src/paic/: __init__.py  database.py
src/paic/agents/: conversation_agent.py  local_model_agent.py  ollama_agent.py  task_agent.py
src/paic/core/: __init__.py  base_assistant.py  cli.py  deepseek.py  director.py  voice.py
src/paic/db/: supabase_sqlalchemy.py
src/paic/endpoints/: elevenlabs.py
src/paic/models/: __init__.py  project.py
src/paic/templates/: agents.json  assistant_config.yml  base_assistant.yml  sql.yml  voice_commands.yml
src/paic/utils/: shared_state.py  yml_loader.py
src/paic_python_starter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+8 files in other folders)
